code cleanup/reorder

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("PS2MainPage.jpg");
+    background-image: url("./assets/images/PS2MainPage.jpg");
     background-repeat: no-repeat;
     background-size: 800px 500px;
     background-attachment: fixed;
