--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
 body {
-    background-image: url("PS2MainPage.jpg");
+    background-image: url("./assets/images/PS2MainPage.jpg");
     background-repeat: no-repeat;
     background-size: 800px 500px;
     background-attachment: fixed;
-    background-position: 50% 75%;
+    background-position: 50% 95%;
 }
 
 h1 {
@@ -20,8 +20,8 @@ h2 {
 #logo{
     width: auto;
     height: auto;
-    max-width: 90px;
-    max-height: 90px;
+    max-width: 40px;
+    max-height: 40px;
 }
 .optionA{
     background-color: #ab2a03;
