--- a/pages/servicePage/servicepage_a.css
+++ b/pages/servicePage/servicepage_a.css
@@ -1,11 +1,26 @@
-body{
-	background-color: #e1bc91;
-}
 
-.car_img{
+#map{
 	height: 300px;
 	width: 400px;
+}
 
+#main, #side {float:left; display:inline; width: 49%;}
+
+figcaption{
+	font-weight: bolder;
+	font-size: 1.5rem;
+}
+.car_img_wrapper {
+	width:100%;
+    height:250px;
+    display:flex;
+    overflow:hidden
+}
+.car_img{
+	flex-shrink:0;
+    -webkit-flex-shrink: 0;
+    max-width:70%;
+    max-height:90%;
 }
 
 .form-style {
